--- a/static/login.html
+++ b/static/login.html
@@ -8,102 +8,189 @@
   <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="/static/lib/bootstrap-icons/bootstrap-icons.css">
   <style>
+    /* Vercel 风格登录页面（简约白色 - 柔和色调） */
     :root {
-      --primary-color: #0d6efd;
-      --secondary-color: #6c757d;
-      --success-color: #198754;
-      --danger-color: #dc3545;
+      --primary-color: #3b82f6;
+      --primary-hover: #2563eb;
+      --bg-primary: #ffffff;
+      --bg-secondary: #fafafa;
+      --bg-card: #ffffff;
+      --text-primary: #000000;
+      --text-secondary: #666666;
+      --border-color: #eaeaea;
+    }
+
+    * {
+      box-sizing: border-box;
     }
 
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif;
+      background: var(--bg-secondary);
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
+      padding: 1rem;
+      -webkit-font-smoothing: antialiased;
     }
 
     .login-container {
-      background: white;
-      border-radius: 20px;
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+      background: var(--bg-card);
+      border: 1px solid var(--border-color);
+      border-radius: 16px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.08);
       overflow: hidden;
       width: 100%;
-      max-width: 400px;
+      max-width: 420px;
     }
 
     .login-header {
-      background: var(--primary-color);
-      color: white;
-      padding: 30px;
+      background: var(--bg-card);
+      border-bottom: 1px solid var(--border-color);
+      color: var(--text-primary);
+      padding: 2rem;
       text-align: center;
+    }
+
+    .login-header i {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      color: var(--primary-color);
     }
 
     .login-header h2 {
       margin: 0;
-      font-weight: 600;
+      font-weight: 700;
+      font-size: 1.5rem;
+      letter-spacing: -0.02em;
     }
 
     .login-header p {
-      margin: 10px 0 0 0;
-      opacity: 0.9;
+      margin: 0.5rem 0 0 0;
+      color: var(--text-secondary);
+      font-size: 0.875rem;
     }
 
     .login-body {
-      padding: 40px 30px;
+      padding: 2rem;
+    }
+
+    .login-tabs .btn-group {
+      background: var(--bg-secondary);
+      border-radius: 8px;
+      padding: 0.25rem;
+    }
+
+    .login-tabs .btn {
+      border: none;
+      background: transparent;
+      color: var(--text-secondary);
+      font-size: 0.8125rem;
+      padding: 0.5rem 0.75rem;
+      transition: all 0.2s ease;
+    }
+
+    .login-tabs .btn-check:checked+.btn {
+      background: var(--bg-card);
+      color: var(--text-primary);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
     }
 
     .form-control {
-      border-radius: 10px;
-      border: 2px solid #e9ecef;
-      padding: 12px 15px;
-      font-size: 16px;
-      transition: all 0.3s ease;
+      border-radius: 8px;
+      border: 1px solid var(--border-color);
+      background: var(--bg-primary);
+      color: var(--text-primary);
+      padding: 0.75rem 1rem;
+      font-size: 0.875rem;
+      transition: all 0.2s ease;
     }
 
     .form-control:focus {
       border-color: var(--primary-color);
-      box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+      box-shadow: 0 0 0 3px rgba(0, 112, 243, 0.1);
+      background: var(--bg-primary);
+      outline: none;
+    }
+
+    .form-control::placeholder {
+      color: var(--text-secondary);
     }
 
     .btn-login {
       background: var(--primary-color);
       border: none;
-      border-radius: 10px;
-      padding: 12px;
-      font-size: 16px;
+      border-radius: 8px;
+      padding: 0.75rem;
+      font-size: 0.875rem;
       font-weight: 600;
       width: 100%;
-      transition: all 0.3s ease;
+      color: white;
+      transition: all 0.2s ease;
     }
 
     .btn-login:hover {
-      background: #0b5ed7;
-      transform: translateY(-2px);
+      background: var(--primary-hover);
+      transform: translateY(-1px);
+      box-shadow: 0 0 20px rgba(0, 112, 243, 0.3);
+    }
+
+    .btn-login:active {
+      transform: translateY(0);
     }
 
     .input-group {
       position: relative;
-      margin-bottom: 20px;
+      margin-bottom: 1rem;
     }
 
     .input-group i {
       position: absolute;
-      left: 15px;
+      left: 1rem;
       top: 50%;
       transform: translateY(-50%);
-      color: var(--secondary-color);
+      color: var(--text-secondary);
       z-index: 10;
     }
 
     .input-group .form-control {
-      padding-left: 45px;
+      padding-left: 2.75rem;
+    }
+
+    .form-check-input {
+      background-color: var(--bg-primary);
+      border-color: var(--border-color);
+    }
+
+    .form-check-input:checked {
+      background-color: var(--primary-color);
+      border-color: var(--primary-color);
+    }
+
+    .form-check-label {
+      color: var(--text-secondary);
+      font-size: 0.875rem;
     }
 
     .alert {
-      border-radius: 10px;
-      border: none;
+      border-radius: 8px;
+      border: 1px solid var(--border-color);
+      background: var(--bg-secondary);
+      color: var(--text-primary);
+      font-size: 0.875rem;
+    }
+
+    .alert-danger {
+      border-color: #fca5a5;
+      background: #fee2e2;
+      color: #991b1b;
+    }
+
+    .alert-info {
+      border-color: #93c5fd;
+      background: #dbeafe;
+      color: #1e40af;
     }
 
     .loading {
@@ -112,6 +199,83 @@
 
     .loading.show {
       display: inline-block;
+    }
+
+    #defaultLoginInfo {
+      background: var(--bg-secondary);
+      border: 1px solid var(--border-color);
+      border-radius: 8px;
+    }
+
+    #defaultLoginInfo code {
+      background: var(--bg-primary);
+      color: var(--primary-color);
+      border: 1px solid var(--border-color);
+    }
+
+    #registerSection a {
+      color: var(--primary-color);
+    }
+
+    #registerSection a:hover {
+      text-decoration: underline;
+    }
+
+    .text-muted {
+      color: var(--text-secondary) !important;
+    }
+
+    .btn-outline-primary {
+      border: 1px solid var(--border-color);
+      background: transparent;
+      color: var(--text-primary);
+    }
+
+    .btn-outline-primary:hover {
+      background: var(--bg-secondary);
+      border-color: var(--primary-color);
+      color: var(--primary-color);
+    }
+
+    .btn-outline-secondary {
+      border: 1px solid var(--border-color);
+      background: var(--bg-primary);
+      color: var(--text-secondary);
+    }
+
+    .btn-outline-secondary:hover {
+      background: var(--bg-secondary);
+      border-color: var(--border-color);
+      color: var(--text-primary);
+    }
+
+    .bg-light {
+      background: var(--bg-secondary) !important;
+    }
+
+    .login-tabs .btn-group {
+      background: var(--bg-secondary);
+      border-radius: 8px;
+      padding: 0.25rem;
+    }
+
+    .login-tabs .btn {
+      border: none;
+      background: transparent;
+      color: var(--text-secondary);
+      font-size: 0.8125rem;
+      padding: 0.5rem 0.75rem;
+      transition: all 0.2s ease;
+    }
+
+    .login-tabs .btn-check:checked+.btn {
+      background: var(--bg-primary);
+      color: var(--text-primary);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+    }
+
+    .rounded-3 {
+      border-radius: 8px !important;
     }
   </style>
 </head>
